--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,13 @@ button {
     text-transform: uppercase;
     font-weight: 600;
     padding: 15px 45px;
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: #ad1813;
+    transition: 1s ease-in-out;
+    border: 1px solid #fff;
 }
 
 .image-marioeluigi {
@@ -38,13 +45,23 @@ body {
 .video {
     position: fixed;
     z-index: -1;
-
     top: 0;
     left: 0;
 }
 
 video {
-    width: 100vw;
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    top: 0;
+}
+
+.mascara {
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(109deg, rgba(10,12,16,0.99) 15%, rgba(10,12,16,0.7) 50%, rgba(10,12,16,0.99) 80%);
+    position: fixed;
+    top: 0;
 }
 
 .caixa-mae {
@@ -53,4 +70,93 @@ video {
     justify-content: space-around;
     padding: 100px;
     height: 100vh;
+}
+
+h1 {
+    font-size: 26px;
+    color: white;
+    margin-bottom: 10px;
+}
+
+p {
+    color: white;
+    margin-top: 20px;
+    line-height: 1.5;
+}
+
+/*ESTILIZAÇÃO DO BOTÃO WHATSAPP*/
+
+.link-whats img {
+    height: 60px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+
+/*ESTILIZAÇÃO DO MENU*/
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin: 30px;
+}
+
+.menu img{
+    height: 60px;
+}
+
+.menu a {
+    color: white;
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.menu a:hover {
+    color: #E0170F;
+    font-size: 24px;
+    transition: 0.5s ease-in-out;
+}
+
+.fale {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 50px;
+    left: 50px;
+    padding: 20px;
+    border-radius: 5px;
+    gap: 20px;
+    top: 30%;
+    left: -300px;
+
+}
+
+
+input {
+    height: 40px;
+    border-radius: 5px;
+    outline-color: #18d80f;
+    border: 1px solid rgba(128, 128, 128, 0.467);
+    padding-left: 5px;
+}
+
+textarea {
+    height: 100px;
+    width: 270px;
+    border-radius: 5px;
+    outline-color: #18d80f;
+    border: 1px solid rgba(128, 128, 128, 0.467);
+    padding-left: 5px;
+}
+
+.mascara-form {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(109deg, rgba(10,12,16,0.99) 15%, rgba(10,12,16,0.7) 50%, rgba(10,12,16,0.99) 80%);;
 }
