--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ video {
     top: 0;
 }
 
+/*MÁSCARA QUE FICA POR CIMA DO VÍDEO*/
 .mascara {
     height: 100vh;
     width: 100%;
@@ -120,6 +121,9 @@ p {
     transition: 0.5s ease-in-out;
 }
 
+
+/*FORMULÁRIO*/
+
 .fale {
     background-color: white;
     display: flex;
@@ -132,6 +136,7 @@ p {
     gap: 20px;
     top: 30%;
     left: -300px;
+    transition: left 1s ease-in-out;
 
 }
 
@@ -153,10 +158,73 @@ textarea {
     padding-left: 5px;
 }
 
+/*MÁSCARA QUE FICA NO FUNDO DO FORMULÁRIO AO SER CLICADO*/
+
 .mascara-form {
+    visibility: hidden; 
     position: fixed;
     top: 0;
     width: 100vw;
     height: 100vh;
     background: linear-gradient(109deg, rgba(10,12,16,0.99) 15%, rgba(10,12,16,0.7) 50%, rgba(10,12,16,0.99) 80%);;
+    transition: visibility;
+}
+
+/*RESPONSIVIDADE*/
+
+@media(max-width: 1100px){
+
+    .content h1 {
+        display: none;
+    }
+
+    .content p {
+        display: none;
+    }
+
+    .caixa-mae {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 10px;
+    }
+
+    .content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .image-marioeluigi {
+        width: 80vw;
+        height: auto;
+    }
+
+    .logo-mario-bros {
+        width: 60vw;
+        height: auto;
+        padding-bottom: 15px;
+    }
+
+    .menu img {
+        display: none;
+    }
+
+    .menu {
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .menu a {
+        font-size: 18px;
+    }
+
+    button {
+        padding: 10px 40px;
+        font-size: 10px;
+    }
 }
